# smartrepo

./: .gitignore  README.md  pyproject.toml  requirements.txt
smart_repo/: __init__.py  config.py
smart_repo/benchmarks/: __init__.py  conftest.py  runner.py  test_cases.py
smart_repo/cli/: __init__.py  main.py
smart_repo/context/: __init__.py  governor.py  pruner.py  token_counter.py
smart_repo/core/: __init__.py  agent.py  checkpoint.py  runtime.py  session.py
smart_repo/memory/: __init__.py  file_memory.py  process_notes.py  store.py  task_memory.py
smart_repo/models/: __init__.py  base.py  claude.py  deepseek.py  openai.py  registry.py
smart_repo/security/: __init__.py  approval.py  param_validator.py  sandbox.py  secret_sanitizer.py
smart_repo/tools/: __init__.py  base.py  file_tools.py  git_tools.py  registry.py  shell.py
