[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-repo"
version = "1.0.0"
description = "面向代码仓库的本地多模型智能体工具 — Local Multi-Model Agent Harness for Code Repositories"
authors = [{name = "SmartRepo Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
smart-repo = "smart_repo.cli.main:main"

[tool.setuptools.packages.find]
include = ["smart_repo*"]

[tool.pytest.ini_options]
testpaths = ["smart_repo/benchmarks"]
asyncio_mode = "auto"
